--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,6 @@
-<project xmlns="https://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="https://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="https://maven.apache.org/POM/4.0.0 
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
                              https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
@@ -10,9 +10,33 @@
     <artifactId>lru-cache</artifactId>
     <version>1.0.0-SNAPSHOT</version>
 
-    <!-- Project-wide properties -->
+    <!-- Project-wide properties: can be defined and used throughout the POM file to avoid repeating values -->
     <properties>
         <maven.compiler.release>21</maven.compiler.release> <!-- Java version -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <surefire.plugin.version>3.2.5</surefire.plugin.version>
     </properties>
+
+
+    <!-- Dependencies: Self explanatory-->
+    <dependencies>
+        <dependency> <!-- brings in JUnit's engine and API for writing and executing tests-->
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>5.10.2</version>
+            <scope>test</scope>
+        </dependency>
+     </dependencies>
+
+    <!-- Build info -->
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>${surefire.plugin.version}</version>
+            </plugin>
+        </plugins>
+    </build>
+
 </project>
